<resources>
    <string name="app_name">ImageSearch</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_images">Search images</string>
    <string name="see">See</string>
    <string name="images">Images</string>
    <string name="search">Search</string>
    <string name="adv_search">Adv Search</string>
    <string name="search_videos">Search Videos</string>
</resources>
