<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_list"
    android:orientation="vertical"
    tools:context="productions.darthplagueis.imagesearch.fragment.images.ImageSearchFragment">

    <EditText
        android:id="@+id/query_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:background="@color/white"
        android:elevation="8dp"
        android:hint="@string/search_images"
        android:padding="10dp"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@color/colorPrimary"
        android:elevation="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/see"
            android:textColor="@color/white"
            android:textSize="25sp" />


        <productions.darthplagueis.imagesearch.util.CustomSpinner
            android:id="@+id/spinner"
            style="@style/Widget.AppCompat.Spinner"
            android:layout_width="150dp"
            android:layout_height="?attr/dropdownListPreferredItemHeight"
            android:layout_margin="10dp"
            android:background="@drawable/spinner_bg"
            android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
            android:dropDownWidth="150dp"
            android:paddingRight="14dp"
            android:popupBackground="@color/colorPrimaryDark"
            android:popupElevation="3dp"
            android:stateListAnimator="@drawable/spinner_sla">

        </productions.darthplagueis.imagesearch.util.CustomSpinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/images"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingEnd="20dp"
        android:paddingStart="20dp">

        <Button
            android:id="@+id/adv_search_frag"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:background="@color/colorPrimaryDark"
            android:padding="2dp"
            android:text="@string/adv_search"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/query_search_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:background="@color/colorAccent"
            android:text="@string/search"
            android:textColor="@color/white" />

    </LinearLayout>

    <Button
        android:id="@+id/video_search_button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="Search videos Instead"
        android:textColor="@color/black"
        android:textStyle="bold" />

</LinearLayout>
